cmake_minimum_required(VERSION 2.8)
project(SFM)
find_package(PCL)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBS_DIRS})
add_definitions(${PCL_DEFINTIONS})
add_executable(SFM src/Registration.cpp)
target_link_libraries (SFM ${PCL_LIBRARIES})
execute_process(COMMAND echo "by nicapoet")

